--- a/package.json
+++ b/package.json
@@ -18,17 +18,26 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.7.0",
+    "emoji-dictionary": "^1.0.10",
     "fontawesome": "^5.6.3",
     "js-cookie": "^2.2.1",
+    "multi-select-react": "^0.1.8",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
+    "react-country-flags": "^2.2.3",
     "react-dom": "^16.13.0",
+    "react-drag-and-drop": "^3.0.0",
+    "react-emoji": "^0.5.0",
     "react-hot-loader": "^4.12.19",
+    "react-initial": "^1.0.12",
+    "react-multiple-select-dropdown": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select": "^3.1.0",
+    "react-virtualized-dnd": "^2.5.1",
+    "react-widgets": "^4.5.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
