--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "sweetalert-react": "^0.4.11",
+    "sweetalert2-react": "^0.8.3",
     "typescript": "~3.7.2",
     "webfontloader": "^1.6.28"
   },
